# qsv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  dotenv.template
.github/workflows/: devskim.yml  macOS-arm64-selfhosted-publish-nightly.yml  macOS-arm64-selfhosted-publish-qsvpy.yml  macOS-arm64-selfhosted-publish.yml  publish-linux-glibc-231-musl-123.yml  publish-macOS-x86_64.yml  publish-nightly.yml  publish-portable.yml  publish-qsvpy.yml  publish-wix-installer.yml  publish.yml  rust-beta.yml  rust-macos-x86.yml  rust-musl.yml  rust-nightly-bleeding-edge.yml  rust-polars-nightly.yml  rust-polars-pinned-nightly.yml  rust-windows-lite.yml  rust-windows.yml  rust.yml  test-publish-nightly.yml  test-publish.yml
benches/: trim_benchmark.rs
contrib/completions/examples/: qsv.bash  qsv.elv  qsv.fig.js  qsv.fish  qsv.nu  qsv.ps1  qsv.zsh
contrib/completions/src/: cli.rs
contrib/completions/src/cmd/: edit.rs  geocode.rs  geoconvert.rs  lens.rs  mod.rs  pivotp.rs  sort.rs  split.rs  stats.rs  to.rs  validate.rs
docs/: ENVIRONMENT_VARIABLES.md  FEATURES.md  INTERPRETERS.md  PERFORMANCE.md
resources/test/: 2843-test.csv  2843-test.json  311_Service_Requests_from_2010_to_Present-2022-03-04.csv.schema.json  NYC311-5.arrow  NYC311-5.avro  NYC311-5.csv  NYC311-5.csv.zlib  NYC311-5.csv.zst  NYC311-5.json  NYC311-5.jsonl  NYC311-5.parquet  NYC311-5.ssv  NYC311-5.ssv.zst  NYC311-5.tab  NYC311-5.tsv.zlib  NYC311-5.tsv.zst  NYC_311_SR_2010-2020-sample-1M.pschema.json  adur-public-toilets.csv.schema-default.expected.json  adur-public-toilets.csv.schema-strict.expected.json  boston311-10-typesonly-boolean-tf-inferdates-stats.csv  boston311-100-antimodes-len500-stats.csv  boston311-100-everything-8places-stats.csv  boston311-100-everything-date-stats-variance-stddev.csv  boston311-100-everything-date-stats.csv  boston311-100-everything-datenotime-stats.csv  boston311-100-everything-inferdates-defaultwhitelist-stats.csv  boston311-100-everything-nodate-stats.csv  boston311-100-stats.csv  boston311-100-with-nonascii-stats.csv  buses.csv  flowers.json  flowers_nested.json
scripts/: NYC_311_SR_2010-2020-sample-1M-frequency.csv  NYC_311_SR_2010-2020-sample-1M.csv.schema.json  NYC_311_SR_2010-2020-sample-1M.stats.csv  benchmarks.sh
scripts/results/: benchmark_results.csv  benchmark_results_display.csv  latest_results.csv  latest_run_info.tsv  run_info_history.tsv
src/: clitypes.rs  config.rs  lib.rs  lookup.rs  main.rs  maindp.rs  mainlite.rs  odhtcache.rs  select.rs  util.rs
src/cmd/: apply.rs  applydp.rs  clipboard.rs  count.rs  datefmt.rs  describegpt.rs  diff.rs  edit.rs  excel.rs  exclude.rs  fetch.rs  fetchpost.rs  foreach.rs  frequency.rs  geocode.rs  geoconvert.rs  joinp.rs  json.rs  jsonl.rs  lens.rs  luau.rs  mod.rs  partition.rs  pivotp.rs  prompt.rs  pseudo.rs  python.rs  rename.rs  sample.rs  schema.rs  slice.rs  sort.rs  split.rs  sqlp.rs  stats.rs  template.rs  to.rs  tojsonl.rs  transpose.rs  validate.rs
tests/: test_100.rs  test_cat.rs  test_datefmt.rs  test_describegpt.rs  test_edit.rs  test_excel.rs  test_fetch.rs  test_foreach.rs  test_frequency.rs  test_geocode.rs  test_geoconvert.rs  test_joinp.rs  test_json.rs  test_luau.rs  test_pivotp.rs  test_rename.rs  test_reverse.rs  test_schema.rs  test_select.rs  test_slice.rs  test_sort.rs  test_split.rs  test_sqlp.rs  test_stats.rs  test_to.rs  test_validate.rs  tests.rs  workdir.rs
tests/test_100/: lesson_3.rs
