[package]
name          = "qsv"
version       = "5.1.0"                                                                    #:version
authors       = ["Joel Natividad <joel@datHere.com>"]
description   = "A Blazing-Fast Data-wrangling toolkit."
documentation = "https://github.com/dathere/qsv#qsv-ultra-fast-csv-data-wrangling-toolkit"
homepage      = "https://qsv.dathere.com"
repository    = "https://github.com/dathere/qsv"
readme        = "README.md"
keywords      = ["csv", "geocode", "data-engineering", "etl", "opendata"]
categories    = ["command-line-utilities", "parser-implementations"]
license       = "MIT OR Unlicense"
autotests     = false
edition       = "2024"
rust-version  = "1.88"
resolver      = "3"
autobins      = false

include = [
    "src/**/*",
    "LICENSE-MIT",
    "UNLICENSE",
    "README.md",
    "CHANGELOG.md",
    "resources/luau/vendor/luadate/date.lua",
]

[[bin]]
name              = "qsv"
test              = true
bench             = false
doctest           = false
path              = "src/main.rs"
required-features = ["feature_capable"]

[[bin]]
name              = "qsvlite"
test              = true
bench             = false
doctest           = false
path              = "src/mainlite.rs"
required-features = ["lite"]

[[bin]]
name              = "qsvdp"
test              = true
bench             = false
doctest           = false
path              = "src/maindp.rs"
required-features = ["datapusher_plus"]

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name    = "trim_benchmark"
harness = false

[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
strip         = true

[profile.release-samply]
inherits = "release"
debug    = true
strip    = false

[profile.release-nightly]
inherits = "release"
panic    = "abort"

[dependencies]
arboard = { version = "3.6.0", default-features = false, optional = true }
atoi_simd = "0.16"
base62 = { version = "2.2", optional = true }
bitvec = "1"
bytemuck = { version = "1.23", features = [
    "latest_stable_rust",
], optional = true }
byteorder = "1.5"
bytes = "1"
cached = { version = "0.55", features = [
    "ahash",
    "disk_store",
    "redis_ahash",
], optional = true }
calamine = { version = "0.28", features = ["dates"] }
censor = { version = "0.3", optional = true }
chrono = { version = "0.4", default-features = false }
chrono-tz = "0.10"
console = { version = "0.16", optional = true }
cpc = { version = "2", optional = true }
crc32fast = { version = "1.4", optional = true }
crossbeam-channel = "0.5"
csv = "1.3"
csv-core = "0.1"
csv-diff = "0.1"
csv-index = "0.1"
csvlens = { version = "0.13", optional = true, default-features = false, features = [
    "clipboard",
] }
csvs_convert = { version = "0.12", default-features = false, features = [
    "converters",
    "parquet",
], optional = true }
data-encoding = { version = "2.9", optional = true }
dns-lookup = { version = "2", optional = true }
directories = "6.0"
dotenvy = "0.15"
dunce = "1"
dynfmt2 = { version = "0.2", default-features = false, features = ["curly"] }
eudex = { version = "0.1", optional = true }
ext-sort = { version = "0.1", default-features = false }
fast-float2 = "0.2"
flate2 = { version = "1", optional = true }
foldhash = "0.1"
file-format = { version = "0.27", features = ["reader"] }
filetime = "0.2"
flexi_logger = { version = "0.31", features = [
    "async",
    "compress",
    "dont_minimize_extra_stacks",
], default-features = false }
futures = "0.3"
futures-util = "0.3"
gender_guesser = { version = "0.2", optional = true }
geosuggest-core = { version = "0.7", features = ["geoip2"], optional = true }
geosuggest-utils = { version = "0.7", optional = true }
geozero = { version = "0.14.0", features = [
    "with-csv",
    "with-shp",
], optional = true }
governor = { version = "0.10", optional = true }
grex = { version = "1.4", default-features = false }
gzp = { version = "1", default-features = false, features = ["snappy_default"] }
hashbrown = { version = "0.15", optional = true }
human-panic = "2"
indexmap = "2.9"
indicatif = "0.18"
itertools = "0.14"
itoa = "1"
jaq-core = "2"
jaq-json = { version = "1", features = ["serde_json"] }
jaq-std = "2"
jemallocator = { version = "0.5", optional = true }
json-objects-to-csv = "0.1.3"
jsonschema = { version = "0.30", features = [
    "resolve-file",
    "resolve-http",
], default-features = false }
libc = "0.2"
localzone = { version = "0.3", features = ["auto_validation"] }
log = "0.4"
memmap2 = "0.9"
mimalloc = { version = "0.1", default-features = false, optional = true }
minijinja = { version = "2", features = [
    "json",
    "loop_controls",
    "speedups",
    "stacker",
    "urlencode",
] }
minijinja-contrib = { version = "2", features = [
    "datetime",
    "pycompat",
    "rand",
    "timezone",
    "unicode_wordwrap",
    "wordcount",
    "wordwrap",
] }
mlua = { version = "0.10", features = [
    "luau",
    "luau-jit",
    "serialize",
], optional = true }
num_cpus = "1"
odht = "0.3"
phf = { version = "0.12", features = ["macros"] }
polars = { version = "0.49", features = [
    "asof_join",
    "avro",
    "avx512",
    "aws",
    "binary_encoding",
    "business",
    # "cloud",
    "coalesce",
    "cross_join",
    "cse",
    "csv",
    "decompress",
    "diagonal_concat",
    "dtype-array",
    "dtype-categorical",
    "dtype-decimal",
    # "dtype-full",
    "extract_jsonpath",
    "iejoin",
    "ipc",
    "json",
    "lazy",
    "object",
    "parquet",
    "performant",
    "pivot",
    "semi_anti_join",
    "serde-lazy",
    "strings",
    "string_normalize",
    "sql",
    "timezones",
], optional = true }
polars-ops = { version = "0.49", optional = true }
polars-utils = { version = "0.49", optional = true }
publicsuffix = { version = "2.2", optional = true }
pyo3 = { version = "0.25", features = ["auto-initialize"], optional = true }
qsv-dateparser = "0.13"
qsv_docopt = "1.8"
qsv-stats = "0.34"
qsv_currency = "0.7"
qsv-sniffer = { version = "0.11", default-features = false, features = [
    "runtime-dispatch-simd",
] }
qsv_vader_sentiment_analysis = { version = "0.2", optional = true }
rand = "0.9"
rand_hc = "0.4"
rand_xoshiro = "0.7"
rayon = "1.10"
redis = { version = "=0.32", features = [
    "ahash",
    "tcp_nodelay",
], default-features = false, optional = true }
regex = "1"
reqwest = { version = "0.12", features = [
    "blocking",
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "stream",
    "zstd",
], default-features = false }
rfd = { version = "0.15", optional = true }
rust_decimal = { version = "1.37", default-features = false }
ryu = "1"
sanitize-filename = { version = "0.6", optional = true }
sha256 = "1.5"
simd-json = "0.15"
self_update = { version = "0.42", features = [
    "archive-zip",
    "compression-zip-deflate",
    "rustls",
    "signatures",
], default-features = false, optional = true }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = { version = "0.7", optional = true }
simdutf8 = "0.1"
sled = { version = "0.34", optional = true }
smallvec = "1"
snap = "1"
strsim = { version = "0.11", optional = true }
strum = { version = "0.27", features = ["phf"] }
strum_macros = "0.27"
sysinfo = "0.35"
tabwriter = "1.4"
tempfile = "3.20"
thousands = { version = "0.2", optional = true }
threadpool = "1.8"
titlecase = { version = "3", optional = true }
tokio = { version = "1", features = ["parking_lot", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "v7"] }
url = "2.5"
whatlang = { version = "0.16", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = "4"

[dev-dependencies]
actix-governor = "0.8"
actix-web = { version = "4.11", default-features = false, features = [
    "compress-brotli",
    "compress-gzip",
] }
assert-json-diff = "2.0"
criterion = "0.6"
newline-converter = "0.3"

# disable similar-asserts until it upgrades its console dependency
# similar-asserts = "1.7"

# disable these dev dependencies for testing the `to` command
# as they are expensive and slow down the build/CI tests
# postgres = "0.19"
# rusqlite = { version = "0.32", features = ["bundled"] }

quickcheck  = { version = "1", default-features = false }
serial_test = { version = "3.2", features = ["file_locks"] }

[patch.crates-io]
# use our tweaked fork of csv crate
# the csv crate underpins a lot of qsv's functionality, so every perf tweak helps
# the main feature of this csv fork is accelerated UTF-8 validation using the simdutf8 crate
# non-allocating ByteRecord trim and a non-allocating StringRecord trim_ascii
csv       = { git = "https://github.com/dathere/rust-csv", branch = "qsv-optimized-non-allocating-byterecord-trim" }
csv-core  = { git = "https://github.com/dathere/rust-csv", branch = "qsv-optimized-non-allocating-byterecord-trim" }
csv-index = { git = "https://github.com/dathere/rust-csv", branch = "qsv-optimized-non-allocating-byterecord-trim" }

# use our patched fork of cached; though our PR of hashbrown to 0.15 has been merged,
# our redis PR is still pending
cached = { git = "https://github.com/jqnatividad/cached", branch = "bump-redis-to-0.32-hashbrown-to-0.15" }

# we also now co-maintain calamine, but there are still unreleased fixes
calamine = { git = "https://github.com/tafia/calamine", rev = "65467b3" }

# use our patched fork of csvlens to add natural sort until our PR is merged
csvlens = { git = "https://github.com/jqnatividad/csvlens", branch = "133-natural-sort" }

# use our patched fork of csvs_convert to bump dependencies until our PR is merged
csvs_convert = { git = "https://github.com/jqnatividad/csvs_convert", branch = "bump-rust_xlsxwriter-to-0.88" }

# use our patched fork of grex to bump dependencies and Unicode tables from 15 to 16 until our PR is merged
grex = { git = "https://github.com/jqnatividad/grex", branch = "bumped-dependencies-202502" }

# use our patched fork of json-objects-to-csv to bump deps and to preserve order until our PR is merged
json-objects-to-csv = { git = "https://github.com/jqnatividad/json-objects-to-csv", branch = "preserve_order_issue_10" }

# use latest upstream with unreleased fixes
jsonschema = { git = "https://github.com/Stranger6667/jsonschema", rev = "958b430" }

# use our patched fork of localzone to bump dependencies until our PR is merged
localzone = { git = "https://github.com/jqnatividad/localzone", branch = "bump-deps-may2025" }

# use latest upstream now that our PR has been merged, but a new release hasn't been made yet
rfd = { git = "https://github.com/PolyMeilex/rfd", rev = "db842f5" }

# use our patched fork of self_update to bump zip 2 to 4, until our PR is merged
self_update = { git = "https://github.com/jqnatividad/self_update", branch = "bump-deps-july2025" }

# use our patched fork of sled to get rid of unmaintained instant
sled = { git = "https://github.com/dathere/sled", branch = "v0.34.7-bumped-parking_lot_to_0.12" }

# Polars has a much higher release tempo for its Python bindings compared
# to its underlying Rust library. See https://github.com/pola-rs/polars/releases
# It's qsv's policy to use the latest upstream of polars/py-polars
# to take advantage of Polars' latest unreleased fixes and features.
# Based on what's available at the time of qsv's release, we may need to pin polars to a py-polars tag
# or a specific commit if more revisions have been made since the latest polars/py-polars release.
# BUILD NOTE: Be sure to set QSV_POLARS_REV below to the latest commit short hash or tag 
# of polars/py-polars before building qsv. This allows us to show the polars rev/tag in --version.
# The convention to use for QSV_POLARS_REV is:
# - if we are using a release version of Rust Polars, leave QSV_POLARS_REV empty
# - if we are using a release version of Python Polars, use the Python tag
#   (e.g. py-1.19.0)
# - if we are using a commit hash, separate the tag and commit hash with a colon, in the order of
#   - Python Polars tag
#   - short commit hash
#     (e.g. py-1.19.0:52ea381 to indicate that we are Python Polars 1.19.0,
#      and the commit hash 52ea381)
# ================================
# QSV_POLARS_REV=adfafd7
# polars = { git = "https://github.com/pola-rs/polars", tag = "py-1.30.0-beta.1" }
polars = { git = "https://github.com/pola-rs/polars", rev = "adfafd7" }
# polars-ops = { git = "https://github.com/pola-rs/polars", tag = "py-1.30.0-beta.1" }
polars-ops = { git = "https://github.com/pola-rs/polars", rev = "adfafd7" }
# polars-utils = { git = "https://github.com/pola-rs/polars", tag = "py-1.30.0-beta.1" }
polars-utils = { git = "https://github.com/pola-rs/polars", rev = "adfafd7" }

[features]
default = ["mimalloc"]
distrib_features = [
    "feature_capable",
    "apply",
    "fetch",
    "foreach",
    "geocode",
    "luau",
    "polars",
    "python",
    "to",
]
all_features = ["distrib_features", "self_update", "ui"]
apply = [
    "base62",
    "censor",
    "cpc",
    "crc32fast",
    "data-encoding",
    "eudex",
    "gender_guesser",
    "hashbrown",
    "qsv_vader_sentiment_analysis",
    "strsim",
    "thousands",
    "titlecase",
    "whatlang",
]
clipboard = ["arboard"]
fetch = [
    "cached",
    "console",
    "flate2",
    "governor",
    "hashbrown",
    "publicsuffix",
    "redis",
    "serde_urlencoded",
    "sled",
]
foreach = []
geocode = [
    "bytemuck",
    "cached",
    "dns-lookup",
    "geosuggest-core",
    "geosuggest-utils",
    "geozero",
    "sled",
]
luau = ["mlua", "sanitize-filename"]
polars = ["dep:polars", "bytemuck", "dep:polars-ops", "dep:polars-utils"]
prompt = ["rfd"]
python = ["pyo3"]
to = ["csvs_convert"]
lens = ["csvlens"]
lite = []
datapusher_plus = ["geocode", "self_update"]
ui = ["clipboard", "prompt", "lens"]
feature_capable = []
nightly = [
    "crc32fast/nightly",
    "hashbrown/nightly",
    "polars/nightly",
    "polars/simd",
    "pyo3/nightly",
    "rand/nightly",
    "simd-json/hints",
]

[package.metadata.deb]
maintainer           = "Konstantin Sivakov <konstantin@datHere.com>"
copyright            = "2024, datHere Inc. <www.dathere.com>"
extended-description = """A high performance CSV data-wrangling toolkit."""
depends              = "$auto"
section              = "utility"
priority             = "optional"

# Default feature and asset
features = ["feature_capable"]
assets   = [["target/release/qsv", "/usr/local/bin/", "755"]]

# Conditional features and assets
[package.metadata.deb.variants.lite]
features = ["lite"]
assets   = [["target/release/qsvlite", "/usr/local/bin/", "755"]]

[package.metadata.deb.variants.datapusher_plus]
features = ["datapusher_plus", "luau"]
assets   = [["target/release/qsvdp", "/usr/local/bin/", "755"]]
